Changed annotation names, fixed dependencies, added github site plugin

--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>mrak.utils</groupId>
   <artifactId>json-util</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1</version>
+  
   <properties>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <github.global.server>github</github.global.server>
   </properties>
   
   <dependencies>
+  
 	<dependency>
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
 		<version>20131018</version>
+		<scope>test</scope>
 	</dependency>
 	
 	<dependency>
@@ -33,6 +37,31 @@
 	            <target>1.7</target>
 	        </configuration>	
   		</plugin>
+  		
+		<plugin>
+			<groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.11</version>
+            <configuration>
+                <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                <noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                <includes><include>**/*</include></includes>
+                <repositoryName>json-util</repositoryName>      <!-- github repo name -->
+                <repositoryOwner>matrak</repositoryOwner>    <!-- github username  -->
+            </configuration>
+            <executions>
+              <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>deploy</phase>
+              </execution>
+            </executions>
+		</plugin>
+        		
   	</plugins>
   </build>
   
