--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,20 @@
     <github.global.server>github</github.global.server>
   </properties>
   
+  <distributionManagement>
+    <repository>
+      <id>internal.repo</id>
+      <name>Temporary Staging Repository</name>
+      <url>file://${project.build.directory}/mvn-repo</url>
+    </repository>
+  </distributionManagement>
+  
   <dependencies>
   
 	<dependency>
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
 		<version>20131018</version>
-		<scope>test</scope>
 	</dependency>
 	
 	<dependency>
@@ -37,6 +44,14 @@
 	            <target>1.7</target>
 	        </configuration>	
   		</plugin>
+  		
+		<plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8.1</version>
+			<configuration>
+				<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+			</configuration>
+		</plugin>
   		
 		<plugin>
 			<groupId>com.github.github</groupId>
